# floracco

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  LOG.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/: launch.json
apps/review/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/review/src/: App.tsx  api.ts  features.ts  highlight.ts  styles.css  types.ts
apps/review/src/components/: ActComponentBadges.tsx  AddInvestorPanel.tsx  CaseBar.tsx  CreateRecordForm.tsx  DatabasePanel.tsx  DbFilters.tsx  DbSideHint.tsx  DecisionBar.tsx  DistributionRibbon.tsx  ErrorBoundary.tsx  HighlightedText.tsx  ImagePanel.tsx  InlineFieldEditor.tsx  LookupCombobox.tsx  ManuscriptLightbox.tsx  ManuscriptThumb.tsx  MatchSummary.tsx  PersonPicker.tsx  PlaceMap.tsx  ProposeFixDrawer.tsx  ReconcileHandoffStrip.tsx  (+10 more)
assets/: logo-source.ai
deploy/: backup_corrections.sh  reset_demo.sh
docs/: correction_candidates.md  corrections_workflow.md  data_dictionary.md  data_layout.md  glossary.md  review_platform.md
docs/schema/: README.md
docs/tools/: README.md
docs/workflows/: README.md  qa_packet_schema.md  tracked_changes_word_panel.md
scripts/: fetch_geonames.py
tests/: test_revision_parser.py
workflows/: correction_candidates.py  corrections_db.py  data_quality.py  db_import.py  geonames.py  image_pipeline.py  integrity_report.py  place_cache.py  place_resolve.py  reference_match.py  review_server.py  search_index.py  word_cross_check.py  word_cross_check_audit.py  word_pipeline.py
(+15 files in other folders)
