[project]
name = "floracco"
version = "0.1.0"
description = "Code and workflows for the Florentine Accomandite Project (1445–1808)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo",
    "openpyxl>=3.1.5",
    "pandas",
    "python-dotenv",
    "streamlit>=1.58.0",
    "xlrd>=2.0.2",
]
